--- a/Aset/waifuu.html
+++ b/Aset/waifuu.html
@@ -4,6 +4,7 @@
         Some Waifu 
     </title>
     <link rel="stylesheet" href="waifuc.css">
+    <link rel="shortcut icon" type="x-icon" href="Aset/alf.png">
     <h1 align="center">Beberapa waifu</h1>
 </head>
 <body>
