--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
     <head>
         <title>Gallery</title>
         <link rel="stylesheet" href="Aset/Galerics.css">
+        <link rel="shortcut icon" type="x-icon" href="Aset/alf.png">
     </head>
     <body>
         <nav>
