--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Perkenalkan</title>
         <link rel="stylesheet" href="Aset/style.css" />
+        <link rel="shortcut icon" type="x-icon" href="Aset/alf.png">
     </head>
     <body>
         <nav background="koboslime.png">
