--- a/infoo.html
+++ b/infoo.html
@@ -3,6 +3,7 @@
     <head>
         <title>More Info</title>
         <link rel="stylesheet" href="Aset/infoc.css">
+        <link rel="shortcut icon" type="x-icon" href="Aset/alf.png">
     </head>
     <body>
         <nav>
