--- a/kontak.html
+++ b/kontak.html
@@ -4,6 +4,7 @@
         <title>Kontak</title>
         <link rel="stylesheet" href="Aset/Kontakc.css">
         <link rel="stylesheet" href="Aset/font-awesome-4.7.0/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="shortcut icon" type="x-icon" href="Aset/alf.png">
     </head>
     <body>
         <nav>
@@ -49,6 +50,16 @@
                     <p>kamu bisa nyari aku di twitter dengan username tersebut.walau aku nggak pernah ngetweet dan gak punya follower sama sekali.dan postingan yang disimpen... you know lah </p>
                     <p style="text-align:center;">
                         <a target="_blank" href="https://twitter.com/Al_Farisi_17?t=XVMga72Vy-t4_TbRUTUZRA&s=09">Twitter</a>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="fa fa-github" aria-hidden="true"></i>
+                <h5>@Aalfars</h5>
+                <div class="pra">
+                    <p>kamu bisa nyari aku di github walau isinya cuma tugas dan hal gak jelas  </p>
+                    <p style="text-align:center;">
+                        <a target="_blank" href="https://github.com/Aalfars">GitHub</a>
                     </p>
                 </div>
             </div>
