--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section class="bag-satu">
                 <h1 class="text-hello">Perkenalkan Saya <span>Faris</span></h1>
                 <p>
-                    Saya adalah pelajar di SMK N 2 Karanganyar dalam program keahlian Pengembangan perangkat lunak dan gim. saya bercita cita menjadi programmer suatu saat nanti. Hobi saya adalah bermain game,membaca komik,mendengarkan musik. And my favorite Vtuber is Kobo Kanaeru
+                    Saya adalah pelajar di SMK N 2 Karanganyar dalam program keahlian Pengembangan perangkat lunak dan gim. 
                 </p>
                 <a href="infoo.html"><button class="btn-info">More information</button></a>
             </section>
