--- a/infoo.html
+++ b/infoo.html
@@ -22,7 +22,7 @@
         <section class="bag-satu">
             <h1 class="text-hello">About <span>Me</span></h1>
             <p>
-                Namaku Ahmad Alfarisi, bisa dipanggil faris atau ahmad atau terserah kamu yang penting jangan yang buruk buruk. Aku sekarang tinggal di Cilengan, Mojoroto, Mojogedang, Karanganyar. saya bercita cita menjadi programmer suatu saat nanti. Hobi saya adalah bermain, game, membaca komik, mendengarkan musik. Ulang tahunku adalah 17 Maret, mungkin nanti ada yang mau kasih kado wkwk TAPI JANGAN MINTA PU. hobiku adalah bermain game,mendengarkan musik, membaca komik, Scroll IG ampe tamat,nonton stream kobo selama mungkin dan menonton animeh kadang kadang dan karna menonton anime aku juga ada <a target="blank" href="Aset/waifuu.html">waifuu</a>
+                Namaku Ahmad Alfarisi, bisa dipanggil faris atau ahmad atau terserah kamu yang penting jangan yang buruk buruk. Aku sekarang tinggal di Cilengan, Mojoroto, Mojogedang, Karanganyar. saya bercita cita menjadi programmer suatu saat nanti. Ulang tahunku adalah 17 Maret, mungkin nanti ada yang mau kasih kado wkwk TAPI JANGAN MINTA PU. hobiku adalah bermain game,mendengarkan musik, membaca komik, Scroll IG ampe tamat,nonton stream kobo selama mungkin dan menonton animeh kadang kadang dan karna menonton anime aku juga ada <a target="blank" href="Aset/waifuu.html">waifuu</a>
             </p>
         </section>
         <section class="bag-dua">
